	Nomenclature was cautiously fixed. Most important changes: Ledum
	palustre -> Rhododendron tomentosum (Led.pal -> Rhodtome),
	Cetraria nivalis -> Flavocetraria nivalis (Cet.niv ->
	Flavniva). In addition, Dip.mon was corrected to Diphcomp
	(Diphasiastrum complanatum, should perhaps be Lycopodium c.), and
	Barbilophozia lycopodioides to B. hatcheri.
	
Version 2.1-40 (closed December 12, 2013)	
	
	* anova.cca: Function is now based on the new code, but the old is
	avaialable in a function called ccanova. The API changes:
	arguments 'step' and 'perm.max' are gone and replaced with
	'permutations' that accepts a how() object defining permutations,
	or a single number like previously or a permutation matrix. The
	new anova.cca adds an option of analysing a sequence of ordination
	models. This also means that '...' is now the second argument and
	the names of all arguments must be written in full. This change
	can be expected to cause trouble outside vegan. Currently the
	tests in examples are passed, but tests fail (looks like being
	caused by the change in API). 

	* add1.cca, drop1.cca, ordistep, ordiR2step: functions were
	adapted to new anova.cca and this brought along similar changes in
	API. 

	* envfit: function assumed that environmental variables are either
	factors or numeric, and choked if they were neither but, say,
	character strings. Now the function tries to coerce all
	non-numeric variables into factors, including character strings
	and logical. This is one possible reason for problems reported in
	https://stat.ethz.ch/pipermail/r-sig-ecology/2013-December/004217.html,
	although the reported case is irreproducible and we cannot be
	sure. Also fixed handling of tied values in assessing the P-values
	in vectorfit.

	* ordispider: can now use spatial medians as centres instead of
	the default centroids. The kind of centre is defined by new
	argument 'spiders'.

	* tests for cca/rda/capscale: commented out test that failed with