@@ -19,9 +19,12 @@
             ## and the existing set of labels is replaced
             if (!is.null(labs$v) && !is.null(labs$f))
                 stop("needs a list with both 'vectors' and 'factors' labels")
-            if (!is.null(labs$v))
+            ## need to handle the case where both sets of labels are NULL
+            ## such as when used with the default interface and single x
+            ln <- sapply(labs, is.null)
+            if (ln["v"])
                 labs$v <- labels
-            else
+            if (ln["f"])
                 labs$f <- labels
         }
     }
@@ -102,7 +105,7 @@
         xlim <- range(xstack[,1] + sw, xstack[,2] - sw)
         ylim <- range(xstack[,2] + sh, xstack[,2] - sh)
         plot.window(xlim = xlim, ylim = ylim, asp = 1, ...)
-        ## Re-evaluate arrow.mul, set its text and re-evaluate limits again 
+        ## Re-evaluate arrow.mul, set its text and re-evaluate limits again
         if (!is.null(vect)) {
             arrow.mul <- ordiArrowMul(vect, at = at, fill = 1)
             vect <- arrow.mul * vect
@@ -119,7 +122,7 @@
         alabs <- colnames(vect)
         title(..., ylab = alabs[2], xlab = alabs[1])
     }
-    
+
     if (!is.null(vect)) {
         arrows(at[1], at[2], vect[, 1], vect[, 2], len = 0.05,
                col = col)
